User Tokens Addition Updated for Laravel ~4.1.26
User(Model^Migrations^Seeds) Updated for newer versions of Laravel
(~4.1.26)

Laravel 4.1.26 introduces security improvements for "remember me"
cookies. Before this update, if a remember cookie was hijacked by
another malicious user, the cookie would remain valid for a long period
of time, even after the true owner of the account reset their password,
logged out, etc.

more info at: http://laravel.com/docs/upgrade#upgrade-4.1.26

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@
 composer.phar
 composer.lock
 .DS_Store
+
+app/config/database.php
+
+app/config/app.php
+
+app/config/app.php
+
+app/config/database.php
